ladybird-git/TODO
Downloads files during build:
-- Found Python3: /usr/pkg/bin/python3.11 (found version "3.11.8") found components: Interpreter
-- Removing outdated /scratch/wip/ladybird-git/work/serenity/Ladybird/cmake-pkgsrc-build/Lagom/../caches/CLDR for version 44.1.0
-- Downloading file cldr.zip from https://github.com/unicode-org/cldr-json/releases/download/44.1.0/cldr-44.1.0-json-modern.zip
-- Downloading file adobe-icc-profiles.zip from https://download.adobe.com/pub/adobe/iccprofiles/win/AdobeICCProfilesCS4Win_end-user.zip
-- Removing outdated /scratch/wip/ladybird-git/work/serenity/Ladybird/cmake-pkgsrc-build/Lagom/../caches/CACERT for version 2023-12-12
-- Downloading file cacert-2023-12-12.pem from https://curl.se/ca/cacert-2023-12-12.pem
-- Removing outdated /scratch/wip/ladybird-git/work/serenity/Ladybird/cmake-pkgsrc-build/Lagom/../caches/UCD for version 15.1.0
-- Downloading file UCD.zip from https://www.unicode.org/Public/15.1.0/ucd/UCD.zip
-- Downloading file emoji-test.txt from https://www.unicode.org/Public/emoji/15.1/emoji-test.txt
-- Downloading file IdnaMappingTable.txt from https://www.unicode.org/Public/idna/15.1.0/IdnaMappingTable.txt
-- Downloading file public_suffix_list.dat from https://raw.githubusercontent.com/publicsuffix/list/master/public_suffix_list.dat
-- Downloading file commonmark.spec.json from https://spec.commonmark.org/0.30/spec.json

Currently doesn't build with:

In file included from /scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibGfx/SystemTheme.h:17,
                 from /scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibGfx/Palette.h:15,
                 from /scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibSyntax/Highlighter.h:11,
                 from /scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibSyntax/Language.cpp:9:
/scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibGfx/Color.h: In member function 'constexpr u8 Gfx::Color::luminosity() const':
/scratch/wip/ladybird-git/work/serenity/Userland/Libraries/LibGfx/Color.h:321:28: error: call to non-'constexpr' function 'I AK::Rounding::round_to(float) [with I = unsigned char]'
  321 |         return round_to<u8>(red() * 0.2126f + green() * 0.7152f + blue() * 0.0722f);
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Reported here:
https://github.com/SerenityOS/serenity/issues/23375

Core dumps when visiting any websites.
Reported at
https://github.com/SerenityOS/serenity/issues/23375
